# markkarpov.com

./: .gitignore  Dockerfile  README.md  about.md  circle.yml  default.nix  env.yaml  flake.nix  hie.yaml  markkarpov-com.cabal  netlify.toml  resume.md  robots.txt  shell.nix  stack.yaml  watch.fish  watch.sh
.circleci/: config.yml
.circleci/images/primary/: .gitignore  Dockerfile  README.md  build-image.sh  stack.yaml
.github/workflows/: ci.yaml
ansible/: README.md  ansible.cfg  deploy.yml  mk.yml  root-playbook.yml  root.yml  setup.yml
ansible/inventory/: allservers.ini
ansible/templates/: 50unattended-upgrades  nginx.conf
ansible/vars/: vars.yml
app/: Main.hs
attachment/: IndentationSensitiveParsing.hs  ParsingWhile.hs  RecoveryFeature.hs
config/: env.yaml
lib/: Markdown.hs  Post.hs  Route.hs  Utils.hs
megaparsec/: custom-error-messages.md  first-steps-with-megaparsec.md  fun-with-the-recovery-feature.md  indentation-sensitive-parsing.md  megaparsec-chapter-from-ih.md  megaparsec.md  parsing-simple-imperative-language.md  switch-from-parsec-to-megaparsec.md  writing-a-fast-parser.md
nix/: pkgs.nix  sources.json
nix/html5validator/: default.nix
nix/nixpkgs/: default.nix
nix/texlive-custom/: default.nix
notes/: api.md
post/: alternatives-to-bs-and-text.md  announcing-ghc-syntax-highlighter.md  announcing-hasky-stack.md  announcing-megaparsec-5.md  announcing-mmark.md  canon-eos-r-settings.md  category-theory-part-1.md  data-default.md  digital-photography-workflow.md  dvorak-rocks.md  evolution-of-error-messages.md  existential-quantification.md  exposure.md  free-monad-considered-harmful.md  github-actions-for-haskell-ci.md  haskell-pure-memoization.md  haskell-vs-ocaml.md  latest-additions-to-megaparsec.md  lisp-and-haskell.md  looking-for-comaintainers.md  megaparsec-4-and-5.md  megaparsec-7.md  megaparsec-8.md  megaparsec-more-speed-more-power.md  migrating-text-metrics.md  mmark-status-update.md  new-site.md  path-0.6.0-released.md  putting-together-a-form-validation-library.md  req-1.0.0-http-client-and-streaming.md  short-bs-and-text.md  smart-constructors-that-cannot-fail.md  struggling-to-forget.md  the-identicon-package.md  the-monads.md  thoughts-on-readert-design-pattern.md  vision.md  watercolor-equipment.md  watercolor-palette.md  what-does-a-humped-critter-have-to-teach-us.md  (+2 more)
posts/: announcing-megaparsec-5.md  category-theory-part-1.md  dvorak-rocks.md  latest-additions-to-megaparsec.md  lisp-and-haskell.md  the-identicon-package.md
resume/: metadata.yaml  pdf-only-prefix.mustache  resume.md  resume.tex
static/css/: bootstrap.min.css  source-code.css
static/js/: custom.js  put-anchors.js
templates/: 404.mustache  about.mustache  artworks.mustache  atom-feed.mustache  default.mustache  essays.mustache  galleries.mustache  gallery.mustache  learn-haskell.mustache  notes.mustache  oss.mustache  post.mustache  posts.mustache  resume.mustache  translations.mustache  wpiece.mustache  writing.mustache
translation/: battre-les-moyennes.md
tutorial/: a-shake-tutorial.md  exceptions.md  generics.md  ghc-optimization-and-fusion.md  megaparsec.md  monad-control-why-and-how.md  th.md
writing/: 01-tentales.md  02-fibleths-of-bobel.md  03-the-dot.md  04-how-will-it-be.md  05-irment-vandreboob.md  06-understanding.md  07-poetry.md
