name:                 markkarpov-com
version:              0.1.0
cabal-version:        >= 1.10
tested-with:          GHC==8.0.2
license:              AllRightsReserved
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/markkarpov.com
category:             Web
synopsis:             Mark Karpov's personal web site
build-type:           Simple
description:          Mark Karpov's personal web site.
extra-doc-files:      README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/markkarpov.com.git

executable mk-com
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      aeson
                    , base
                    , blaze-html
                    , containers
                    , data-default-class
                    , mtl
                    , pandoc
                    , shake
                    , stache
                    , text
                    , time
                    , transformers
                    , unordered-containers
                    , yaml
  ghc-options:        -O2 -Wall -threaded
  default-language:   Haskell2010
