cabal-version:   1.18
name:            markkarpov-com
version:         0.1.0
license:         AllRightsReserved
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.4
homepage:        https://github.com/mrkkrp/markkarpov.com
synopsis:        Mark Karpov's personal web site
description:     Mark Karpov's personal web site.
category:        Web
build-type:      Simple
extra-doc-files: README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/markkarpov.com.git

executable mk-com
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2 -Wall -threaded
    build-depends:
        aeson -any,
        base -any,
        containers -any,
        lens -any,
        lens-aeson -any,
        lucid -any,
        megaparsec -any,
        mmark -any,
        mmark-ext -any,
        modern-uri -any,
        mtl -any,
        shake -any,
        skylighting -any,
        stache -any,
        tagged -any,
        text -any,
        time -any,
        transformers -any,
        unordered-containers -any,
        vector -any,
        yaml -any
