cabal-version:   2.4
name:            markkarpov-com
version:         0.1.0
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.6.3
homepage:        https://github.com/mrkkrp/markkarpov.com
synopsis:        Mark Karpov's personal web site
description:     Mark Karpov's personal web site.
category:        Web
build-type:      Simple
extra-doc-files: README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/markkarpov.com.git

executable mk-com
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -O2 -Wall -threaded -Wall -Werror -Wredundant-constraints
        -Wpartial-fields -Wunused-packages

    build-depends:
        aeson >=2,
        base,
        containers,
        lens,
        lens-aeson >=1.2,
        lucid,
        megaparsec,
        mmark,
        mmark-ext,
        modern-uri,
        shake,
        stache,
        text,
        time,
        unordered-containers,
        vector,
        yaml
